# Kelompok1-ML

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  Panduan perbaikan bug gdp asean.md  Panduan project gdp asean final.md  README.md  app.py  fix_encoding.py  pyproject.toml  requirements.py  requirements.txt  selesai.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
assets/: style.css
data/eda_outputs/: descriptive_stats.csv
data/processed/: dataset_asean.csv  dataset_indonesia.csv
data/raw/: Exchange_Rate.csv  Exports.csv  FDI.csv  Imports.csv  Inflation.csv  Unemployment.csv  dataset_asean.csv  exchange_rate.csv  exports.csv  fdi.csv  gdp_growth.csv  population_growth.csv  unemployement.csv
docs/: DEPLOY_GUIDE.MD  TEAM_SETUP.md  UPLOAD_INSTRUCTIONS.md  design_guide.md  eda_summary.md
gdp-prediction/: .gitignore  app.py
gdp-prediction/assets/: style.css
gdp_prediction_indonesia/: __init__.py  dataset.py  features.py  plots.py
models/: best_model.pkl  data_split.pkl  decision_tree.pkl  features.json  forecast_report.json  linear_regression.pkl  model_report.json  random_forest.pkl  ridge_regression.pkl  scaler.pkl
notebooks/: 01_data_collection.executed.ipynb  01_data_collection.ipynb  02_eda.ipynb  03_preprocessing.ipynb  04_modeling.ipynb  05_forecasting.ipynb
pages/: 01_Home.py  02_EDA.py  03_Prediksi.py  03_Visualisasi.py  04_Analisis_Global.py  04_Prediksi.py  05_Kesimpulan.py
references/: gdp_indonesia.csv
scripts/: preprocessing.py  preprocessing_py.py  visualization.py
utils/: navigation.py  world_data.py
(+22 files in other folders)
