[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gdp_prediction_indonesia"
version = "0.0.1"
description = "Prediksi GDP Growth Indonesia menggunakan Machine Learning"
authors = [
  { name = "Kelompok 1 Machine Learning" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["gdp_prediction_indonesia"]
include = ["pyproject.toml", "gdp_prediction_indonesia/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["gdp_prediction_indonesia"]
force-sort-within-sections = true

